@@ -134,7 +134,7 @@ server:
 	# use-syslog: yes 
 
 	# the pid file.
-	# pidfile: "unbound.pid"
+	# pidfile: "/etc/unbound/unbound.pid"
 	
 	# file to read root hints from.
 	# get one from ftp://FTP.INTERNIC.NET/domain/named.cache
